[gd_scene load_steps=11 format=3 uid="uid://dgea1jbl8u36"]

[ext_resource type="Script" uid="uid://dkiylqtfy1cqh" path="res://Objects/generator.gd" id="1_2u7no"]
[ext_resource type="PackedScene" uid="uid://ct6ix4mjvgp8a" path="res://Objects/peg_area.tscn" id="2_2u7no"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0q5sr"]
size = Vector2(318, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuc11"]
size = Vector2(319.5, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwi2o"]
size = Vector2(24, 539)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwlxq"]
size = Vector2(24, 536)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8n24x"]
size = Vector2(16, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7lws"]
size = Vector2(140, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njrjh"]
size = Vector2(118, 71)

[sub_resource type="Environment" id="Environment_j3qtk"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.3
glow_hdr_luminance_cap = 78.5

[node name="Generator" type="Node2D"]
script = ExtResource("1_2u7no")

[node name="Background" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 540.0
color = Color(0, 0, 0, 1)

[node name="Wall" type="Node2D" parent="."]

[node name="UperWall" type="StaticBody2D" parent="Wall"]
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/UperWall"]
position = Vector2(160, 15.5)
shape = SubResource("RectangleShape2D_0q5sr")

[node name="ColorRect" type="ColorRect" parent="Wall/UperWall"]
offset_left = 1.0
offset_top = 1.0
offset_right = 320.0
offset_bottom = 31.0
color = Color(0.393086, 0.393086, 0.393085, 1)

[node name="BottomWall" type="StaticBody2D" parent="Wall"]
position = Vector2(0, 509)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/BottomWall"]
position = Vector2(160.25, 6)
shape = SubResource("RectangleShape2D_uuc11")

[node name="ColorRect" type="ColorRect" parent="Wall/BottomWall"]
offset_left = 1.0
offset_top = 1.0
offset_right = 320.0
offset_bottom = 31.0
color = Color(0.393086, 0.393086, 0.393085, 1)

[node name="LeftWall" type="StaticBody2D" parent="Wall"]
position = Vector2(-1, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/LeftWall"]
position = Vector2(13, 265.5)
shape = SubResource("RectangleShape2D_pwi2o")

[node name="ColorRect" type="ColorRect" parent="Wall/LeftWall"]
offset_left = 1.0
offset_top = -5.0
offset_right = 26.0
offset_bottom = 535.0
color = Color(0.393086, 0.393086, 0.393085, 1)

[node name="MidDivider" type="StaticBody2D" parent="Wall"]
position = Vector2(0, 407)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/MidDivider"]
position = Vector2(160.25, 6)
shape = SubResource("RectangleShape2D_uuc11")

[node name="ColorRect" type="ColorRect" parent="Wall/MidDivider"]
offset_left = 1.0
offset_top = 1.0
offset_right = 320.0
offset_bottom = 12.0
color = Color(0.393086, 0.393086, 0.393085, 1)
metadata/_edit_use_anchors_ = true

[node name="RightWall" type="StaticBody2D" parent="Wall"]
position = Vector2(294, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/RightWall"]
position = Vector2(13, 270)
shape = SubResource("RectangleShape2D_vwlxq")

[node name="ColorRect" type="ColorRect" parent="Wall/RightWall"]
offset_left = 1.0
offset_top = 1.0
offset_right = 26.0
offset_bottom = 540.0
color = Color(0.393086, 0.393086, 0.393085, 1)

[node name="ScoreDivider" type="StaticBody2D" parent="Wall"]
position = Vector2(75, 372)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/ScoreDivider"]
position = Vector2(98, -3)
shape = SubResource("RectangleShape2D_8n24x")

[node name="ColorRect" type="ColorRect" parent="Wall/ScoreDivider"]
offset_left = 90.0
offset_top = -41.0
offset_right = 106.0
offset_bottom = 39.0
color = Color(0.393086, 0.393086, 0.393085, 1)
metadata/_edit_use_anchors_ = true

[node name="PegArea" parent="." instance=ExtResource("2_2u7no")]
position = Vector2(0, -1)
scroll_height = 180.0

[node name="Score1" type="Area2D" parent="."]
position = Vector2(78, 370)

[node name="Score1Collision" type="CollisionShape2D" parent="Score1"]
position = Vector2(17, 3)
shape = SubResource("RectangleShape2D_h7lws")

[node name="ColorRect" type="ColorRect" parent="Score1"]
modulate = Color(2, 2, 1, 1)
offset_left = -53.0
offset_top = -33.0
offset_right = 88.0
offset_bottom = 40.0
color = Color(1, 1, 0, 0.862745)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Score1"]
offset_left = -53.0
offset_top = -33.0
offset_right = 87.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "x2"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Score2" type="Area2D" parent="."]
position = Vector2(228, 370)

[node name="Score1Collision" type="CollisionShape2D" parent="Score2"]
position = Vector2(8, 2.5)
shape = SubResource("RectangleShape2D_njrjh")

[node name="ColorRect" type="ColorRect" parent="Score2"]
modulate = Color(2, 0, 1.4, 1)
offset_left = -47.0
offset_top = -33.0
offset_right = 68.0
offset_bottom = 39.0
color = Color(1, 0, 0.737255, 0.835294)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Score2"]
offset_left = -48.0
offset_top = -33.0
offset_right = 67.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "R"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_j3qtk")

[node name="ReleaseValue" type="Label" parent="."]
offset_left = 160.0
offset_top = 419.0
offset_right = 295.0
offset_bottom = 510.0
theme_override_colors/font_color = Color(1, 0, 0.737255, 0.835294)
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Values" type="Label" parent="." groups=["Ball"]]
offset_left = 24.0
offset_top = 420.0
offset_right = 160.0
offset_bottom = 509.0
theme_override_font_sizes/font_size = 40
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallSpawnerTopLeft" type="Marker2D" parent="."]
position = Vector2(46, 47)

[node name="BallSpawnerBottomRight" type="Marker2D" parent="."]
position = Vector2(277, 128)

[connection signal="body_entered" from="Score1" to="." method="_on_score_1_body_entered"]
[connection signal="body_entered" from="Score2" to="." method="_on_score_2_body_entered"]
